# dotnet-skills-evals

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
datasets/activation/: akka_test_cases.jsonl
datasets/effectiveness/: akka_test_cases.jsonl
datasets/rubrics/: akka-aspire-configuration.yaml  akka-best-practices.yaml  akka-hosting-actor-patterns.yaml  akka-management.yaml  akka-testing-patterns.yaml
src/dotnet_skills_evals/: __init__.py  cli.py  config.py
src/dotnet_skills_evals/eval_activation/: __init__.py  detection.py  mechanisms.py  metrics.py  runner.py
src/dotnet_skills_evals/eval_activation_quiz/: metrics.py  signatures.py
src/dotnet_skills_evals/eval_effectiveness/: metrics.py  runner.py  signatures.py
src/dotnet_skills_evals/reporting/: results.py
src/dotnet_skills_evals/skills/: catalog.py  loader.py  variants.py
tests/: test_activation_metrics.py  test_detection.py  test_loader.py  test_metrics.py
